[Mac] Fix Fullscreen Issue for Popup Windows

In OSX 10.10+, some combination of the titlebar and
toolbar always show in fullscreen mode. We do not want
either to show so we hide the window that contains these
views. This way, only our custom toolbar will show on
the screen.

However, this cause an issue where the titlebar
disappears for windows without our custom toolbar
(Ex/ Chrome app windows and popups). This CL adds a check
so that that we only hide the window if it has a toolbar.

Bug: 601038
Change-Id: Ia125273a534d69b4ad406dc2d5329d31f2d97602
Reviewed-on: https://chromium-review.googlesource.com/758500
Commit-Queue: Sarah Chan <spqchan@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515221}
Former-commit-id: a84fdabbb93cbe6db4366eff24d2ed438f6e1e0e